foi incluido banner h2, banner pe os dots

--- a/index.html
+++ b/index.html
@@ -3,41 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Person Hardman</title>
+    <title>Perason Hardman</title>
     <link rel="stylesheet" href="./css/style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- ======== -->
+     <!-- BootStrap Icons -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+     <!-- ======== -->
 </head>
 <body>
     <header id="header">
         <div id="inner-header">
-            <h2 id="brand">Person Hardman</h2>
+            <h2 id="brand">Pearson Hardman</h2>
             <nav id="navbar">
-                <a href="#header">Início</a>
-                <a href="#expertise-areas">Serviços</a>
-                <a href="#about">Sobre</a>
-                <a href="#team">Time</a>
-                <a href="#contact">Contato</a>
+              <a href="#header">Inicio</a>
+              <a href="#expertise-areas">Serviços</a>  
+              <a href="#about">Sobre</a>  
+              <a href="#team">Time</a>  
+              <a href="#contact">Contato</a>  
             </nav>
         </div>
-        <div class="banner">
-            <span class="square">
-                <h2>Melhores experts em direito do pais</h2>
-                <p>Os Advogados mais qualificados estão aqui, agende uma reunião e conheça nosso time</p>
-            </span>
+        <div class="banner active">
+            <span class="square"></span>
+            <h2>Melhores experts em direitos do pais</h2>
+            <p>Os advogados mais bem qualificados do pais estão aqui, Agende uma reunião e conheça nosso time</p>
         </div>
-        <!-- dots são pontos -->
+        <div class="banner">
+            <span class="square"></span>
+            <h2>advogados</h2>
+            <p>Melhores experts em direitos do pais</p>
+        </div>
         <div class="dots">
+            <div class="dot.active"></div>
             <div class="dot"></div>
             <div class="dot"></div>
-            <div class="dot"></div>
-
         </div>
     </header>
-    <h2>Titulo</h2>
 </body>
 </html>
