--- a/index.html
+++ b/index.html
@@ -1,43 +1,151 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Person Hardman</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Bootstrap Icons  -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body>
+    <!-- Cabeçalho e Banner -->
     <header id="header">
-        <div id="inner-header">
-            <h2 id="brand">Person Hardman</h2>
-            <nav id="navbar">
-                <a href="#header">Início</a>
-                <a href="#expertise-areas">Serviços</a>
-                <a href="#about">Sobre</a>
-                <a href="#team">Time</a>
-                <a href="#contact">Contato</a>
-            </nav>
-        </div>
-        <div class="banner">
-            <span class="square">
-                <h2>Melhores experts em direito do pais</h2>
-                <p>Os Advogados mais qualificados estão aqui, agende uma reunião e conheça nosso time</p>
-            </span>
-        </div>
-        <!-- dots são pontos -->
-        <div class="dots">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-
-        </div>
+      <div id="inner-header">
+        <h2 id="brand">Pearson Hardman</h2>
+        <nav id="navbar">
+          <a href="#header">Início</a>
+          <a href="#expertise-areas">Serviços</a>
+          <a href="#about">Sobre</a>
+          <a href="#team">Time</a>
+          <a href="#contact">Contato</a>
+        </nav>
+      </div>
+      <div class="banner active">
+        <span class="square"></span>
+        <h2>Melhores experts em direito do país</h2>
+        <p>
+          Os advogados mais qualificados estão aqui, agende uma reunião e
+          conheça nosso time
+        </p>
+      </div>
+      <div class="banner">
+        <span class="square"></span>
+        <h2>Advogados</h2>
+        <p>Melhores experts em direito do país</p>
+      </div>
+      <div class="dots">
+        <div class="dot active"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
     </header>
-    <h2>Titulo</h2>
-</body>
+    <!-- Áreas de atuação -->
+    <main id="expertise-areas" class="text-image-section">
+      <div id="expertise-information" class="text-container"></div>
+      <div id="expertise-image-container" class="image-container"></div>
+      <div id="other-services">
+        <div class="service">
+          <img src="images/bank.jpg" alt="Banco" />
+          <i class="bi bi-bank"></i>
+          <div class="service-info">
+            <h4>Bancos e finanças pessoais</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
+              ipsa ab porro velit eum ipsam, distinctio adipisci nihil saepe
+              libero, soluta quod veniam pariatur labore deserunt explicabo
+              assumenda amet officia.
+            </p>
+          </div>
+        </div>
+        <div class="service">
+          <img src="images/construction.jpg" alt="Construção" />
+          <i class="bi bi-bricks"></i>
+          <div class="service-info">
+            <h4>Construção de imóveis sem escritura</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
+              ipsa ab porro velit eum ipsam, distinctio adipisci nihil saepe
+              libero, soluta quod veniam pariatur labore deserunt explicabo
+              assumenda amet officia.
+            </p>
+          </div>
+        </div>
+        <div class="service">
+          <img src="images/company.jpg" alt="Empresa" />
+          <i class="bi bi-building"></i>
+          <div class="service-info">
+            <h4>Empresas e funcionários</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
+              ipsa ab porro velit eum ipsam, distinctio adipisci nihil saepe
+              libero, soluta quod veniam pariatur labore deserunt explicabo
+              assumenda amet officia.
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- Seção Sobre nós -->
+    <section id="about">
+      <div id="about-text">
+        <p class="section-subtitle">Sobre nós</p>
+        <h3 class="section-title">
+          Uma empresa que tem o foco no cliente, aconselhando da melhor forma e
+          conseguindo os melhores resultados
+        </h3>
+        <div class="about-description">
+          <i class="bi bi-briefcase"></i>
+          <div>
+            <h4>Advogados atualizados</h4>
+            <p>
+              Nós promovemos treinamentos mensais a todos os nosso colaboradores
+            </p>
+          </div>
+        </div>
+        <div class="about-description">
+          <i class="bi bi-book"></i>
+          <div>
+            <h4>Domínio das leis</h4>
+            <p>
+              Nossos colaboradores são especializados em várias áreas do
+              Direito, dominando as principais leis em suas especialidades
+            </p>
+          </div>
+        </div>
+      </div>
+      <div id="about-data">
+        <div class="data">
+          <i class="bi bi-person"></i>
+          <p class="number">50</p>
+          <p class="text">Advogados</p>
+        </div>
+        <div class="data">
+          <i class="bi bi-check-all"></i>
+          <p class="number">789</p>
+          <p class="text">Casos resolvidos</p>
+        </div>
+        <div class="data">
+          <i class="bi bi-building"></i>
+          <p class="number">40</p>
+          <p class="text">Clientes</p>
+        </div>
+        <div class="data">
+          <i class="bi bi-trophy"></i>
+          <p class="number">7</p>
+          <p class="text">Prêmios empresarias</p>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
