--- a/index.html
+++ b/index.html
@@ -52,8 +52,15 @@
     </header>
     <!-- Áreas de atuação -->
     <main id="expertise-areas" class="text-image-section">
-      <div id="expertise-information" class="text-container"></div>
-      <div id="expertise-image-container" class="image-container"></div>
+      <div id="expertise-information" class="text-container">
+        <h3 class="section-tittle">Áreas de atuação</h3>
+        <p class="section-subtittle">Nossos especialistas podem ajudar você você em Direito Civil, Ambiental e Empresarial.</p>
+        <a href="#" class="btn">saiba mais</a>
+      </div>
+      <div id="expertise-image-container" class="image-container">
+        <i class="bi bi-people"></i>
+        <img src="images/employees_banner.jpg" alt="Advogados da Person Hardman">
+      </div>
       <div id="other-services">
         <div class="service">
           <img src="images/bank.jpg" alt="Banco" />
@@ -149,3 +156,8 @@
     </section>
   </body>
 </html>
+ 
+tem menu de contexto
+
+
+tem menu de contexto
