--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
           <a href="#team">Time</a>
           <a href="#contact">Contato</a>
         </nav>
+ 
+        <!-- MENU MOBILE -->
+        <i class="bi bi-list" id="menu"></i>
+        <nav id="mobile-navbar">
+        <!-- <nav id="mobile-navbar" class="menu-active"> -->
+          <i class="bi bi-x-lg" id="close-menu"></i>
+          <a href="#header">Início</a>
+          <a href="#expertise-areas">Serviços</a>
+          <a href="#about">Sobre</a>
+          <a href="#team">Time</a>
+          <a href="#contact">Contato</a>
+        </nav>
       </div>
       <div class="banner active">
         <span class="square"></span>
@@ -50,13 +62,14 @@
         <div class="dot"></div>
       </div>
     </header>
+ 
     <!-- Áreas de atuação -->
     <main id="expertise-areas" class="text-image-section">
       <div id="expertise-information" class="text-container">
         <h3 class="section-title">Áreas de atuação</h3>
         <p class="section-subtitle">
-          Nossos especialistas podem ajudar você você em Direito Civil,
-          Ambiental e Empresarial.
+          Nossos especialistas podem ajudar você em Direito Civil, Ambiental e
+          Empresarial.
         </p>
         <a href="#" class="btn">Saiba Mais</a>
       </div>
@@ -64,7 +77,7 @@
         <i class="bi bi-people"></i>
         <img
           src="images/employees_banner.jpg"
-          alt="Advogados da Person Hardman"
+          alt="Advogados da Pearson Hardman"
         />
       </div>
       <div id="other-services">
@@ -109,6 +122,7 @@
         </div>
       </div>
     </main>
+ 
     <!-- Seção Sobre nós -->
     <section id="about">
       <div id="about-text">
@@ -160,70 +174,146 @@
         </div>
       </div>
     </section>
+ 
     <!-- Depoimentos -->
     <section id="testimonial" class="text-image-section">
       <!-- 1ª Esquerda -->
       <div id="testimonial-information" class="text-container">
-        <h3 class="section-title">Depoimentos de clientes</h3>
-        <p class="section-subtitle">
-          A Pearson Hardman resolveu meu caso muito rápido, recomendo a todos.
-        </p>
-        <div class="author">
-          <div class="author-info">
-            <p class="author-name">Jhon Doe</p>
-            <p class="author-job">CEO da Empresa X</p>
+        <div id="testimonial-information" class="text-container">
+          <h3 class="section-title">Depoimentos de clientes</h3>
+          <p class="section-subtitle">
+            A Pearson Hardman resolveu meu caso muito rápido, recomendo a todos.
+          </p>
+          <div class="author">
+            <div class="author-info">
+              <p class="author-name">Jhon Doe</p>
+              <p class="author-job">CEO da Empresa X</p>
+            </div>
+            <img src="images/author_1.jpg" alt="Jhon Doe" />
           </div>
-          <img src="images/author_1.jpg" alt="Jhon Doe" />
-        </div>
-        <h3 class="section-subtitle">
-          O melhor escritório que eu já contratei, conseguimos resolver um caso
-          que durava décadas.
-        </h3>
-        <div class="author">
-          <div class="author-info">
-            <p class="author-name">Paul Clinton</p>
-            <p class="author-job">Gerente de Projetos</p>
+          <p class="section-subtitle">
+            O melhor escritório que eu já contratei, conseguimos resolver um
+            caso que durava décadas.
+          </p>
+          <div class="author">
+            <div class="author-info">
+              <p class="author-name">Paul Clinton</p>
+              <p class="author-job">Gerente de Projetos</p>
+            </div>
+            <img src="images/author_2.jpg" alt="Paul Clinton" />
           </div>
-          <img src="images/author_2.jpg" alt="Paul Clinton" />
         </div>
-    </div>
+      </div>
       <!-- 2ª Direita -->
       <div id="testimonial-image-container" class="image-container">
         <i class="bi bi-quote"></i>
-        <img src="images/court.jpg" alt="Advogado em um tribunal" />
+        <img src="imagens/court.jpg" alt="Advogado em um Tribunal" />
       </div>
     </section>
-        <!-- Colaboradores -->
-        <section id="team">
-          <span class="square"></span>
-          <h2>
-            A <span>Pearson Hardman</span> tem um time de <span class="break-line">especialistas</span> a sua disposição
-          </h2>
-          
-          <div class="employees">
-            <div class="employee">
-              <img src="images/mike.jpg" alt="Mike Ross" />
-              <p class="employee-name">Mike Ross</p>
-              <p class="employee-role">Advogado</p>
-            </div>
-            <div class="employee">
-              <img src="images/harvey.png" alt="Harvey Specter" />
-              <p class="employee-name">Harvey Specter</p>
-              <p class="employee-role">Advogado Sênior</p>
-            </div>
-            <div class="employee">
-              <img src="images/louis.jpg" alt="Louis Litt" />
-              <p class="employee-name">Louis Litt</p>
-              <p class="employee-role">Advogado</p>
-            </div>
-            <div class="employee">
-              <img src="images/jessica.jpg" alt="Jessica Pearson" />
-              <p class="employee-name">Jessica Pearson</p>
-              <p class="employee-role">CEO</p>
-            </div>
+ 
+    <!-- Colaboradores -->
+    <section id="team">
+      <span class="square"></span>
+      <h2>
+        A <span>Pearson Hardman</span> tem um time de especialistas a sua
+        disposição
+      </h2>
+      <div class="employees">
+        <div class="employee">
+          <img src="images/mike.jpg" alt="Mike Ross" />
+          <h3 class="employee-name">Mike Ross</h3>
+          <p class="employee-role">Advogado</p>
+        </div>
+        <div class="employee">
+          <img src="images/harvey.png" alt="Harvey Specter" />
+          <h3 class="employee-name">Harvey Specter</h3>
+          <p class="employee-role">Advogado Sênior</p>
+        </div>
+        <div class="employee">
+          <img src="images/louis.jpg" alt="Louis Litt" />
+          <h3 class="employee-name">Louis Litt</h3>
+          <p class="employee-role">Advogado</p>
+        </div>
+        <div class="employee">
+          <img src="images/jessica.jpg" alt="Jessica Pearson" />
+          <h3 class="employee-name">Jessica Pearson</h3>
+          <p class="employee-role">CEO</p>
+        </div>
+      </div>
+    </section>
+ 
+    <!-- Contato -->
+    <section id="contact" class="text-image-section">
+      <div id="contact-image-container" class="image-container">
+        <img src="images/office.jpg" alt="Advogados no escritório" />
+      </div>
+      <div id="contact-information" class="text-container">
+        <i class="bi bi-envelope"></i>
+        <p class="section-subtitle">Entre em contato</p>
+        <form>
+          <div class="form-control">
+            <input type="text" name="name" id="name" placeholder="Nome" />
+            <input type="email" name="email" id="email" placeholder="E-mail" />
           </div>
-        </section>
+          <input type="text" name="phone" id="phone" placeholder="Telefone" />
+          <textarea
+            name="message"
+            id="message"
+            placeholder="Sua mensagem..."
+          ></textarea>
+          <input type="submit" value="Enviar" class="btn" />
+        </form>
+      </div>
+    </section>
+ 
+    <!-- Rodapé -->
+    <footer id="footer">
+      <div class="contact-info">
+        <div class="footer-brand">
+          <h2>Pearson Hardman</h2>
+          <p>O advogado certo para a sua empresa</p>
+        </div>
+        <p><i class="bi bi-geo-alt"></i> Rua dos Advogados, 1415</p>
+        <p><i class="bi bi-telephone"></i> (99) 9999-9999</p>
+        <p><i class="bi bi-envelope"></i> contato@pearsonhardman.com</p>
+        <div class="social-networks">
+          <p>Siga-nos:</p>
+          <div class="networks">
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-twitter"></i></a>
+            <a href="#"><i class="bi bi-linkedin"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="links-container">
+        <h4>Outros serviços</h4>
+        <nav>
+          <a href="#">Propriedade intelectual</a>
+          <a href="#">LGPD</a>
+          <a href="#">Direito internacional</a>
+          <a href="#">Processos</a>
+        </nav>
+      </div>
+      <div class="links-container">
+        <h4>Páginas</h4>
+        <nav>
+          <a href="#">Termos e condições</a>
+          <a href="#">Política de privacidade</a>
+          <a href="#">Fale com um especialista</a>
+          <a href="#">FAQ</a>
+        </nav>
+      </div>
+      <div class="links-container">
+        <h4>Consulta grátis</h4>
+        <div class="phone-number">
+          <i class="bi bi-telephone"></i>
+          <p>(99) 9999-9999</p>
+        </div>
+        <p class="phone-info">
+          Este telefone é especial para tratar de casos já em andamento
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
- 
- 
