--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+     <link
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <script src="js/script.js" defer></script>
   </head>
   <body>
     <!-- Cabeçalho e Banner -->
@@ -53,8 +54,13 @@
       </div>
       <div class="banner">
         <span class="square"></span>
-        <h2>Advogados</h2>
-        <p>Melhores experts em direito do país</p>
+        <h2>Conheça o nosso time </h2>
+        <p>Veja as especialidades dos nossos advogados, e entenda como eles podem lhe ajudar</p>
+      </div>
+      <div class="banner">
+        <span class="square"></span>
+        <h2>Os nossos resultados</h2>
+        <p>Confira as nossas métricas e conheça os resultados que já obtivemos</p>
       </div>
       <div class="dots">
         <div class="dot active"></div>
@@ -207,7 +213,7 @@
       <!-- 2ª Direita -->
       <div id="testimonial-image-container" class="image-container">
         <i class="bi bi-quote"></i>
-        <img src="imagens/court.jpg" alt="Advogado em um Tribunal" />
+        <img src="images/court.jpg" alt="Advogado em um Tribunal" />
       </div>
     </section>
  
@@ -317,3 +323,4 @@
     </footer>
   </body>
 </html>
+ 
