--- a/index.html
+++ b/index.html
@@ -1,305 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>Person Hardman</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-     <link
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="stylesheet" href="./css/style.css" />
+<title>Person Hardman</title>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link
+<link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <script src="js/script.js" defer></script>
-  </head>
-  <body>
-    <header id="header">
-      <div id="inner-header">
-        <h2 id="brand">Pearson Hardman</h2>
-        <nav id="navbar">
-          <a href="index.html">Início</a>
-          <a href="serviço.html">Serviços</a>
-          <a href="sobre.html">Sobre</a>
-          <a href="time.html">Time</a>
-          <a href="contato.html">Contato</a>
-        </nav>
-        <i class="bi bi-list" id="menu"></i>
-        <nav id="mobile-navbar">
-          <i class="bi bi-x-lg" id="close-menu"></i>
-          <a href="index.html">Início</a>
-          <a href="serviço.html">Serviços</a>
-          <a href="sobre.html">Sobre</a>
-          <a href="time.html">Time</a>
-          <a href="contato.html">Contato</a>
-        </nav>
-      </div>
-      <div class="banner active">
-        <span class="square"></span>
-        <h2>Melhores experts em direito do país</h2>
-        <p>
+<script src="js/script.js" defer></script>
+</head>
+<body>
+<header id="header">
+<div id="inner-header">
+<h2 id="brand">Pearson Hardman</h2>
+<nav id="navbar">
+<!-- Links das Pages -->
+<a href="index.html">Início</a>
+<a href="serviço.html">Serviços</a>
+<a href="sobre.html">Sobre</a>
+<a href="time.html">Time</a>
+<a href="contato.html">Contato</a>
+</nav>
+<i class="bi bi-list" id="menu"></i>
+<nav id="mobile-navbar">
+<i class="bi bi-x-lg" id="close-menu"></i>
+<!-- Links das Pages(Responsivo) -->
+<a href="index.html">Início</a>
+<a href="serviço.html">Serviços</a>
+<a href="sobre.html">Sobre</a>
+<a href="time.html">Time</a>
+<a href="contato.html">Contato</a>
+</nav>
+</div>
+<div class="banner active">
+<span class="square"></span>
+<h2>Melhores experts em direito do país</h2>
+<p>
           Os advogados mais qualificados estão aqui, agende uma reunião e
           conheça nosso time
-        </p>
-      </div>
-      <div class="banner">
-        <span class="square"></span>
-        <h2>Conheça o nosso time </h2>
-        <p>Veja as especialidades dos nossos advogados, e entenda como eles podem lhe ajudar</p>
-      </div>
-      <div class="banner">
-        <span class="square"></span>
-        <h2>Os nossos resultados</h2>
-        <p>Confira as nossas métricas e conheça os resultados que já obtivemos</p>
-      </div>
-      <div class="dots">
-        <div class="dot active"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-      </div>
-    </header>
-    <main id="expertise-areas" class="text-image-section">
-      <div id="expertise-information" class="text-container">
-        <h3 class="section-title">Áreas de atuação</h3>
-        <p class="section-subtitle">
-          Nossos especialistas podem ajudar você em Direito Civil, Ambiental e
-          Empresarial.
-        </p>
-        <a href="#" class="btn">Saiba Mais</a>
-      </div>
-      <div id="expertise-image-container" class="image-container">
-        <i class="bi bi-people"></i>
-        <img
-          src="images/employees_banner.jpg"
-          alt="Advogados da Pearson Hardman"
-        />
-      </div>
-      <div id="other-services">
-        <div class="service">
-          <img src="images/bank.jpg" alt="Banco" />
-          <i class="bi bi-bank"></i>
-          <div class="service-info">
-            <h4>Bancos e finanças pessoais</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
-              ipsa ab porro velit eum ipsam, distinctio adipisci nihil saepe
-              libero, soluta quod veniam pariatur labore deserunt explicabo
-              assumenda amet officia.
-            </p>
-          </div>
-        </div>
-        <div class="service">
-          <img src="images/construction.jpg" alt="Construção" />
-          <i class="bi bi-bricks"></i>
-          <div class="service-info">
-            <h4>Construção de imóveis sem escritura</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
-              ipsa ab porro velit eum ipsam, distinctio adipisci nihil saepe
-              libero, soluta quod veniam pariatur labore deserunt explicabo
-              assumenda amet officia.
-            </p>
-          </div>
-        </div>
-        <div class="service">
-          <img src="images/company.jpg" alt="Empresa" />
-          <i class="bi bi-building"></i>
-          <div class="service-info">
-            <h4>Empresas e funcionários</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
-              ipsa ab porro velit eum ipsam, distinctio adipisci nihil saepe
-              libero, soluta quod veniam pariatur labore deserunt explicabo
-              assumenda amet officia.
-            </p>
-          </div>
-        </div>
-      </div>
-    </main>
-    <section id="about">
-      <div id="about-text">
-        <h3 class="section-title">Sobre nós</h3>
-        <p class="section-subtitle">
-          Uma empresa que tem o foco no cliente, aconselhando da melhor forma e
-          conseguindo os melhores resultados
-        </p>
-        <div class="about-description">
-          <i class="bi bi-briefcase"></i>
-          <div>
-            <h4>Advogados atualizados</h4>
-            <p>
-              Nós promovemos treinamentos mensais a todos os nosso colaboradores
-            </p>
-          </div>
-        </div>
-        <div class="about-description">
-          <i class="bi bi-book"></i>
-          <div>
-            <h4>Domínio das leis</h4>
-            <p>
-              Nossos colaboradores são especializados em várias áreas do
-              Direito, dominando as principais leis em suas especialidades
-            </p>
-          </div>
-        </div>
-      </div>
-      <div id="about-data">
-        <div class="data">
-          <i class="bi bi-person"></i>
-          <p class="number">50</p>
-          <p class="text">Advogados</p>
-        </div>
-        <div class="data">
-          <i class="bi bi-check-all"></i>
-          <p class="number">789</p>
-          <p class="text">Casos resolvidos</p>
-        </div>
-        <div class="data">
-          <i class="bi bi-building"></i>
-          <p class="number">40</p>
-          <p class="text">Clientes</p>
-        </div>
-        <div class="data">
-          <i class="bi bi-trophy"></i>
-          <p class="number">7</p>
-          <p class="text">Prêmios empresarias</p>
-        </div>
-      </div>
-    </section>
-    <section id="testimonial" class="text-image-section">
-      <div id="testimonial-information" class="text-container">
-        <div id="testimonial-information" class="text-container">
-          <h3 class="section-title">Depoimentos de clientes</h3>
-          <p class="section-subtitle">
-            A Pearson Hardman resolveu meu caso muito rápido, recomendo a todos.
-          </p>
-          <div class="author">
-            <div class="author-info">
-              <p class="author-name">Jhon Doe</p>
-              <p class="author-job">CEO da Empresa X</p>
-            </div>
-            <img src="images/author_1.jpg" alt="Jhon Doe" />
-          </div>
-          <p class="section-subtitle">
-            O melhor escritório que eu já contratei, conseguimos resolver um
-            caso que durava décadas.
-          </p>
-          <div class="author">
-            <div class="author-info">
-              <p class="author-name">Paul Clinton</p>
-              <p class="author-job">Gerente de Projetos</p>
-            </div>
-            <img src="images/author_2.jpg" alt="Paul Clinton" />
-          </div>
-        </div>
-      </div>
-      <div id="testimonial-image-container" class="image-container">
-        <i class="bi bi-quote"></i>
-        <img src="images/court.jpg" alt="Advogado em um Tribunal" />
-      </div>
-    </section>
-    <section id="team">
-      <span class="square"></span>
-      <h2>
-        A <span>Pearson Hardman</span> tem um time de especialistas a sua
-        disposição
-      </h2>
-      <div class="employees">
-        <div class="employee">
-          <img src="images/mike.jpg" alt="Mike Ross" />
-          <h3 class="employee-name">Mike Ross</h3>
-          <p class="employee-role">Advogado</p>
-        </div>
-        <div class="employee">
-          <img src="images/harvey.png" alt="Harvey Specter" />
-          <h3 class="employee-name">Harvey Specter</h3>
-          <p class="employee-role">Advogado Sênior</p>
-        </div>
-        <div class="employee">
-          <img src="images/louis.jpg" alt="Louis Litt" />
-          <h3 class="employee-name">Louis Litt</h3>
-          <p class="employee-role">Advogado</p>
-        </div>
-        <div class="employee">
-          <img src="images/jessica.jpg" alt="Jessica Pearson" />
-          <h3 class="employee-name">Jessica Pearson</h3>
-          <p class="employee-role">CEO</p>
-        </div>
-      </div>
-    </section>
-    <section id="contact" class="text-image-section">
-      <div id="contact-image-container" class="image-container">
-        <img src="images/office.jpg" alt="Advogados no escritório" />
-      </div>
-      <div id="contact-information" class="text-container">
-        <i class="bi bi-envelope"></i>
-        <p class="section-subtitle">Entre em contato</p>
-        <form>
-          <div class="form-control">
-            <input type="text" name="name" id="name" placeholder="Nome" />
-            <input type="email" name="email" id="email" placeholder="E-mail" />
-          </div>
-          <input type="text" name="phone" id="phone" placeholder="Telefone" />
-          <textarea
-            name="message"
-            id="message"
-            placeholder="Sua mensagem..."
-          ></textarea>
-          <input type="submit" value="Enviar" class="btn" />
-        </form>
-      </div>
-    </section>
-    <footer id="footer">
-      <div class="contact-info">
-        <div class="footer-brand">
-          <h2>Pearson Hardman</h2>
-          <p>O advogado certo para a sua empresa</p>
-        </div>
-        <p><i class="bi bi-geo-alt"></i> Rua dos Advogados, 1415</p>
-        <p><i class="bi bi-telephone"></i> (99) 9999-9999</p>
-        <p><i class="bi bi-envelope"></i> contato@pearsonhardman.com</p>
-        <div class="social-networks">
-          <p>Siga-nos:</p>
-          <div class="networks">
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-twitter"></i></a>
-            <a href="#"><i class="bi bi-linkedin"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="links-container">
-        <h4>Outros serviços</h4>
-        <nav>
-          <a href="#">Propriedade intelectual</a>
-          <a href="#">LGPD</a>
-          <a href="#">Direito internacional</a>
-          <a href="#">Processos</a>
-        </nav>
-      </div>
-      <div class="links-container">
-        <h4>Páginas</h4>
-        <nav>
-          <a href="#">Termos e condições</a>
-          <a href="#">Política de privacidade</a>
-          <a href="#">Fale com um especialista</a>
-          <a href="#">FAQ</a>
-        </nav>
-      </div>
-      <div class="links-container">
-        <h4>Consulta grátis</h4>
-        <div class="phone-number">
-          <i class="bi bi-telephone"></i>
-          <p>(99) 9999-9999</p>
-        </div>
-        <p class="phone-info">
+</p>
+</div>
+<div class="banner">
+<span class="square"></span>
+<h2>Conheça o nosso time</h2>
+<p>
+          Veja as especialidades dos nossos advogados, e entenda como eles podem
+          lhe ajudar
+</p>
+</div>
+<div class="banner">
+<span class="square"></span>
+<h2>Os nossos resultados</h2>
+<p>
+          Confira as nossas métricas e conheça os resultados que já obtivemos
+</p>
+</div>
+<div class="dots">
+<div class="dot active"></div>
+<div class="dot"></div>
+<div class="dot"></div>
+</div>
+</header>
+<!-- Rodapé -->
+<footer id="footer">
+<div class="contact-info">
+<div class="footer-brand">
+<h2>Pearson Hardman</h2>
+<p>O advogado certo para a sua empresa</p>
+</div>
+<p><i class="bi bi-geo-alt"></i> Rua dos Advogados, 1415</p>
+<p><i class="bi bi-telephone"></i> (99) 9999-9999</p>
+<p><i class="bi bi-envelope"></i> contato@pearsonhardman.com</p>
+<div class="social-networks">
+<p>Siga-nos:</p>
+<div class="networks">
+<a href="#"><i class="bi bi-facebook"></i></a>
+<a href="#"><i class="bi bi-twitter"></i></a>
+<a href="#"><i class="bi bi-linkedin"></i></a>
+<a href="#"><i class="bi bi-instagram"></i></a>
+</div>
+</div>
+</div>
+<div class="links-container">
+<h4>Outros serviços</h4>
+<nav>
+<a href="#">Propriedade intelectual</a>
+<a href="#">LGPD</a>
+<a href="#">Direito internacional</a>
+<a href="#">Processos</a>
+</nav>
+</div>
+<div class="links-container">
+<h4>Páginas</h4>
+<nav>
+<a href="#">Termos e condições</a>
+<a href="#">Política de privacidade</a>
+<a href="#">Fale com um especialista</a>
+<a href="#">FAQ</a>
+</nav>
+</div>
+<div class="links-container">
+<h4>Consulta grátis</h4>
+<div class="phone-number">
+<i class="bi bi-telephone"></i>
+<p>(99) 9999-9999</p>
+</div>
+<p class="phone-info">
           Este telefone é especial para tratar de casos já em andamento
-        </p>
-      </div>
-    </footer>
-  </body>
+</p>
+</div>
+</footer>
+</body>
 </html>
